# MetabolomicAnalysisGNN

./: README.md
data_analysis/data_organization/: constructmetadata.m
data_analysis/load_lcms/: constructLCMSData.m  fillPeaks.m  loadLCMS.m  loadMzXml.m
data_analysis/load_lcms/eic_alignment/: alignEICs.m  checkSplit.m  rebalanceMzs.m
data_analysis/load_lcms/load_sample_lcms/: checkMzDiff.m  extractEICs.m  findPeaks.m  identifyPeaksInEIC.m  loadsampleLCMS.m  sliceMzs.m
data_analysis/load_lcms/peak_grouping/: alignPeaks.m  applyPeakAlignmentToGrouping.m  applyPeakAlignmentToSample.m  groupPeaks.m  groupPeaksCore.m
data_analysis/main_scripts/: initialize_config.m  main_new_expeirment.m
machine_learning/: .gitignore  pyproject.toml
machine_learning/notebooks/: runs.ipynb
machine_learning/src/: batch_result.py  cross_validation_run.py  dataset.py  evaluation.py  experiment.py  model.py  plotting.py  training.py
machine_learning/src/data_processing/: data_loading.py  smooth_approximation.py  synthetic_data_generation.py
machine_learning/tables/: drug_targets.csv
