
[project]
name = "machine-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jiwer>=3.1.0",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pyteomics>=4.7.5",
    "scikit-learn>=1.6.1",
    "torch",
    "torch-geometric>=2.6.1",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]

